--- a/css/add-tocart.css
+++ b/css/add-tocart.css
@@ -9,28 +9,23 @@ html {
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 /* navbar */
 .navbar {
-  background-color:#0d6efd;
+  background-color: #0d6efd;
 }
 
 .navbar-nav a {
-  font-size: 13px;
+  font-size: 14px;
   color: white;
   letter-spacing: 1px;
   position: relative;
 }
 
-
 .dropdown-item {
   color: black !important;
-}
-
-.nav-brand-icons .nav-item i {
-  font-size: 13px;
 }
 
 .dropdown-toggle::after {
@@ -39,19 +34,32 @@ body {
 
 .nav-brand-icons .btn {
   text-decoration: none;
-  background-color:white;
-  color: #0d0d0d;
+  color:white;
   font-weight: 500;
   padding: 4px 18px;
+  border: 1px solid whitesmoke;
   border-radius: 2px;
 }
 
 .navbar input {
-  width: 370px;
   letter-spacing: 1px;
   font-size: 13px;
-  border-radius: 8px;
+  width: 500px;
+  border-radius: 2px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -62,6 +70,29 @@ body {
   font-size: 13px;
   letter-spacing: 1px;
 }
+
+.plus-minus a {
+  padding: 0px 10px 0px;
+  text-decoration: none;
+  color: black;
+  font-size: 18px;
+  
+}
+
+.plus-minus button {
+  padding: 0px 15px 0px;
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+  border: 1px solid #0d0d0d;
+  background-color:#0d0d0d;
+}
+
+
+
+
+
+
 .add-to-carts-featured-products-sizes-btn ul li {
   list-style-type: none;
   margin-right: 6px;
@@ -96,7 +127,7 @@ font-weight: 500;
   display: flex;
   width: 30px;
   height: 30px;
-  padding:  17px;
+  padding:  20px;
   justify-content: center;
   align-items: center;
   background-color:#0d6efd;
@@ -190,8 +221,6 @@ font-weight: 500;
 
 
 
-
-
 /* footer */
 .footer-section {
   background-color: #0d6efd;
@@ -209,9 +238,10 @@ font-weight: 500;
 .left-socials-icons a {
   color: #ebebeb;
   border: 1px solid white;
-  padding: 8px;
-  font-size: 10px;
-  border-radius: 100%;
+  padding: 12px;
+  font-size: 13px;
+  margin-right: 10px;
+  border-radius: 10%;
 }
 
 .footer-column-links a {
@@ -223,12 +253,11 @@ font-weight: 500;
   display: block;
 }
 
-
 .footer-column-links-tags a {
   font-size: 11px;
   border: 1px solid rgba(255, 255, 255, 0.271);
   color: #ebebeb;
-  letter-spacing: .9px;
+  letter-spacing: 0.9px;
   line-height: 14px;
   font-weight: 600;
   padding: 8px 15px;
@@ -240,9 +269,8 @@ font-weight: 500;
 .footer-column-links-tags a:hover {
   color: white;
   transition: 0.4s ease-in-out;
-  background-color: #DA1C5C;
+  background-color: #da1c5c;
   -webkit-border-radius: 13px;
-
 }
 
 .footer-post-sec {
@@ -279,7 +307,7 @@ font-weight: 500;
 }
 
 .footer-top {
-  border-bottom: 3px rgba(255, 255, 255, .05) solid;
+  border-bottom: 3px rgba(255, 255, 255, 0.05) solid;
   border-width: 2px;
   padding: 20px 0px 10px;
 }
@@ -322,25 +350,23 @@ font-weight: 500;
   font-size: 11px;
 }
 
-
-.window-top-bottom-scroll{
-background-color: white;
-position: fixed;
-bottom: 0;
-right: 10px;
-display: flex;
-justify-content: center;
-align-items: center;
-border-radius: 50%;
-height: 50px;
-width: 50px;
+.window-top-bottom-scroll {
+  background-color: white;
+  position: fixed;
+  bottom: 0;
+  right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
 }
 
-.window-top-bottom-scroll .btn{
+.window-top-bottom-scroll .btn {
   padding: 10px 20px;
   font-size: 13px;
 }
-
 
 .footer-social-nav li a {
   font-size: 13px;
