--- a/css/blog.css
+++ b/css/blog.css
@@ -18,7 +18,7 @@ body {
 }
 
 .navbar-nav a {
-  font-size: 13px;
+  font-size: 14px;
   color: white;
   letter-spacing: 1px;
   position: relative;
@@ -28,29 +28,34 @@ body {
   color: black !important;
 }
 
-.nav-brand-icons .nav-item i {
-  font-size: 13px;
-}
-
 .dropdown-toggle::after {
   color: white;
 }
 
 .nav-brand-icons .btn {
   text-decoration: none;
-  background-color: white;
-  color: #0d0d0d;
+  color:white;
   font-weight: 500;
   padding: 4px 18px;
+  border: 1px solid whitesmoke;
   border-radius: 2px;
 }
 
 .navbar input {
-  width: 370px;
   letter-spacing: 1px;
   font-size: 13px;
-  border-radius: 8px;
+  width: 500px;
+  border-radius: 2px;
 }
+
+
+
+
+
+
+
+
+
 
 /* blog-section */
 
@@ -60,7 +65,7 @@ body {
 
 .blog-right-social .blog-social-icons li {
   list-style-type: none;
-  margin-right: 15px;
+  margin-right: 14px;
   border: 1px solid black;
   display: flex;
   justify-content: center;
@@ -68,6 +73,7 @@ body {
   padding: 5px 10px;
   background-color: #0d0d0d;
 }
+
 .blog-right-social .blog-social-icons li a {
   color: white;
 }
@@ -156,10 +162,10 @@ body {
 .popular-tags a {
   color: white;
   text-decoration: none;
-  -webkit-border-radius: 17px;
+  -webkit-border-radius: 2px;
   font-size: 17px;
   font-weight: 400x;
-  background-color: #0d0d0d73;
+  background-color:#0d0d0d;
   padding: 8px 15px;
   text-align: center;
   padding: 5px 17px;
@@ -184,9 +190,10 @@ body {
 .left-socials-icons a {
   color: #ebebeb;
   border: 1px solid white;
-  padding: 8px;
-  font-size: 10px;
-  border-radius: 100%;
+  padding: 12px;
+  font-size: 13px;
+  margin-right: 10px;
+  border-radius: 10%;
 }
 
 .footer-column-links a {
@@ -321,5 +328,4 @@ body {
   border: 1px solid rgba(255, 255, 255, 0.271);
   margin-right: 3px;
 }
-
 /* 984 */
