--- a/css/cart.css
+++ b/css/cart.css
@@ -18,7 +18,7 @@ body {
 }
 
 .navbar-nav a {
-  font-size: 13px;
+  font-size: 14px;
   color: white;
   letter-spacing: 1px;
   position: relative;
@@ -28,57 +28,76 @@ body {
   color: black !important;
 }
 
-.nav-brand-icons .nav-item i {
-  font-size: 13px;
-}
-
 .dropdown-toggle::after {
   color: white;
 }
 
 .nav-brand-icons .btn {
   text-decoration: none;
-  background-color: white;
-  color: #0d0d0d;
+  color: white;
   font-weight: 500;
   padding: 4px 18px;
+  border: 1px solid whitesmoke;
   border-radius: 2px;
 }
 
 .navbar input {
-  width: 370px;
   letter-spacing: 1px;
   font-size: 13px;
-  border-radius: 8px;
+  width: 500px;
+  border-radius: 2px;
 }
 
-
-
-
-.main-top-cart-delivery-section{
-  max-width: 1024px;
+.main-top-cart-delivery-section {
+  max-width: 1184px;
   margin: 0px auto;
 }
 .cart-white-bg-section {
-  background-color:#ebebeb;
-  padding: 20px;
+  background-color: #ebebeb;
+  padding: 16px 10px 16px;
+}
+
+.cart-pricing-btn {
+  display: flex;
+  align-items: center;
+}
+
+.cart-pricing-btn .buy-now-btn .btn {
+  background-color: #fb641b;
+  color: white;
+  padding: 5px 9px;
+  margin-right: 8px;
+  text-wrap: nowrap;
+  font-size: 13px;
+  font-weight: 500;
+}
+.cart-pricing-btn .add-to-cart .btn {
+  background-color: #fb641b;
+  color: white;
+  padding: 5px 9px;
+  font-size: 13px;
+  text-wrap: nowrap;
+
+  font-weight: 500;
 }
 
 .plus-minus a {
   padding: 0px 10px 0px;
   text-decoration: none;
   color: black;
-  font-size: 16px;
+  font-size: 19px;
 }
 
 .plus-minus button {
   padding: 0px 10px 0px;
   text-decoration: none;
-  border: 1px solid #0d0d0d;
+  background: #fb641b;
+  border: 1px solid #fb641b;
+  color: white;
 }
 
 .cart-white-bg-section .pricing {
-  font-size: 14px;
+  font-size: 18px;
 }
 
 .cart-white-bg-body p {
@@ -99,12 +118,25 @@ body {
   font-weight: 600;
 }
 
-
-
+.payment-summary-body {
+  background-color: #ebebeb;
+}
+.payment-summary-body h5 {
+  font-size: 18px;
+}
+.place-order-btn .btn {
+  background: #fb641b;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
+  border: none;
+  color: #fff;
+  letter-spacing: 0.4px;
+  font-weight: 500;
+  font-size: 14px;
+  text-transform: uppercase;
+}
 
 /* footer */
 .footer-section {
-  /* background: #222; */
   background-color: #0d6efd;
   background-image: url(../homepageimages/Group\ 48095504\ footer-bg.svg);
   padding: 30px 0px 10px;
@@ -120,9 +152,10 @@ body {
 .left-socials-icons a {
   color: #ebebeb;
   border: 1px solid white;
-  padding: 8px;
-  font-size: 10px;
-  border-radius: 100%;
+  padding: 12px;
+  font-size: 13px;
+  margin-right: 10px;
+  border-radius: 10%;
 }
 
 .footer-column-links a {
@@ -257,5 +290,4 @@ body {
   border: 1px solid rgba(255, 255, 255, 0.271);
   margin-right: 3px;
 }
-
 /* 984 */
