--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 .navbar-nav a {
-  font-size: 13px;
+  font-size: 14px;
   color: white;
   letter-spacing: 1px;
   position: relative;
@@ -28,30 +28,25 @@ body {
   color: black !important;
 }
 
-.nav-brand-icons .nav-item i {
-  font-size: 13px;
-}
-
 .dropdown-toggle::after {
   color: white;
 }
 
 .nav-brand-icons .btn {
   text-decoration: none;
-  background-color: white;
-  color: #0d0d0d;
+  color:white;
   font-weight: 500;
   padding: 4px 18px;
+  border: 1px solid whitesmoke;
   border-radius: 2px;
 }
 
 .navbar input {
-  width: 370px;
   letter-spacing: 1px;
   font-size: 13px;
-  border-radius: 8px;
+  width: 500px;
+  border-radius: 2px;
 }
-
 
 
 
@@ -477,15 +472,30 @@ body {
   width: 120px;
   display: block;
   margin: 0px auto;
+  transition: 0.3s ease-in-out;
+  overflow: hidden;
 }
+
+
+
+
 
 .our-team-section .card {
   padding: 25px;
   flex-wrap: wrap;
   border: 3px solid #00a5ff;
-  box-shadow: 0 0 20px rgba(53, 110, 255, 0.45098039215686275);
+  box-shadow: 0 0 14px rgba(53, 110, 255, 0.45098039215686275);
   border-radius: 10px;
   margin: 10px 0px;
+  overflow: hidden; 
+}
+.our-team-section .card:hover {
+  background-color:black;
+  color: white !important;
+  transition: 0.4s ease-in-out;
+}
+.our-team-section .card:hover h4{
+  color: white;
 }
 
 .our-team-section .card h4 {
@@ -731,9 +741,10 @@ body {
 .left-socials-icons a {
   color: #ebebeb;
   border: 1px solid white;
-  padding: 8px;
-  font-size: 10px;
-  border-radius: 100%;
+  padding: 12px;
+  font-size: 13px;
+  margin-right: 10px;
+  border-radius: 10%;
 }
 
 .footer-column-links a {
