--- a/css/add-tocart.css
+++ b/css/add-tocart.css
@@ -218,6 +218,57 @@ font-weight: 500;
 }
 
 
+/* related-products-section */
+.related-products-section {
+  padding: 30px 0px 20px;
+}
+
+.related-products-section .related-products-title h2 {
+  position: relative;
+  font-size: 32px;
+  font-weight: 600;
+  font-family: 'Poppins', sans-serif;
+  cursor: default;
+  -webkit-text-stroke: 1px #353535;
+  transition: all 0.2s ease-in-out;
+}
+
+
+.related-products-title p {
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: o.1px;
+}
+
+.inner {
+  overflow: hidden;
+}
+
+.inner img {
+  transition: all 1.6s ease;
+}
+
+.inner:hover img {
+  transform: scale(1.6);
+}
+
+.inner img {
+  padding: 10px;
+}
+
+.related-products-section .card-text {
+  font-size: 18px;
+  font-weight: 400;
+  color: #353535;
+  letter-spacing: 0.1px;
+}
+
+
+
+
+
+
+
 
 
 
