--- a/css/blog.css
+++ b/css/blog.css
@@ -1,61 +1,3 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-body {
-  font-family: "Montserrat", sans-serif;
-}
-
-/* navbar */
-.navbar {
-  background-color: #0d6efd;
-}
-
-.navbar-nav a {
-  font-size: 14px;
-  color: white;
-  letter-spacing: 1px;
-  position: relative;
-}
-
-.dropdown-item {
-  color: black !important;
-}
-
-.dropdown-toggle::after {
-  color: white;
-}
-
-.nav-brand-icons .btn {
-  text-decoration: none;
-  color:white;
-  font-weight: 500;
-  padding: 4px 18px;
-  border: 1px solid whitesmoke;
-  border-radius: 2px;
-}
-
-.navbar input {
-  letter-spacing: 1px;
-  font-size: 13px;
-  width: 500px;
-  border-radius: 2px;
-}
-
-
-
-
-
-
-
-
-
 
 /* blog-section */
 
@@ -68,14 +10,22 @@ body {
   margin-right: 14px;
   border: 1px solid black;
   display: flex;
+  font-family: "Poppins", sans-serif;
   justify-content: center;
   align-items: center;
   padding: 5px 10px;
   background-color: #0d0d0d;
 }
 
+.blog-right-social p{
+  font-family: "Poppins", sans-serif;
+  line-height: 28px;
+
+}
 .blog-right-social .blog-social-icons li a {
   color: white;
+  font-family: "Poppins", sans-serif;
+
 }
 
 .blog-about-star-sec li {
@@ -84,7 +34,8 @@ body {
 }
 .blog-right-categories h4 {
   font-size: 18px;
-  font-weight: 700;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
 }
 .blog-right-categories li {
   list-style-type: none;
@@ -92,29 +43,30 @@ body {
 }
 .blog-right-categories li a {
   color: #0d0d0d;
-  font-weight: 500;
+  font-weight: 400;
+  font-family: "Poppins", sans-serif;
   text-decoration: none;
 }
 .latest-post h4 {
-  font-size: 23px;
-  font-weight: 500;
+  font-size: 19px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
   border-bottom: 2px solid rgba(128, 128, 128, 0.464);
 }
 
 .blog-right-middle-para p {
-  font-size: 17px;
-  font-weight: 500;
-  line-height: 27px;
+  font-size: 16px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  line-height: 29px;
   font-family: sans-serif;
-  letter-spacing: 0.3px;
 }
 
-.blog-right-bottom-social {
-}
 
 .blog-right-bottom-social li {
   list-style-type: none;
   margin-right: 15px;
+  font-family: "Poppins", sans-serif;
   border: 1px solid black;
   display: flex;
   justify-content: center;
@@ -131,26 +83,31 @@ body {
   color: white;
   border-left: 10px solid #f76b6a;
   padding: 20px 0px 20px;
+  transform: skew(-4deg);
 }
 .card-bottom-bg-blue h5 {
   font-weight: 600;
+  font-family: "Poppins", sans-serif;
   font-size: 19px;
   letter-spacing: 0.3px;
 }
 .card-bottom-bg-blue h6 {
   font-weight: 400;
+  font-family: "Poppins", sans-serif;
   color: #f76b6a;
 }
 
 .article-next-prev-btn .prev-btn {
   border: 2px solid black;
   padding: 7px 20px;
-  font-size: 13px;
+  font-size: 15px;
+  font-family: "Poppins", sans-serif;
+
 }
 .article-next-prev-btn .next-btn {
   border: 2px solid #212529;
   color: white;
-  font-size: 13px;
+  font-size: 15px;
   background-color: #212529;
   padding: 7px 20px;
 }
@@ -164,168 +121,10 @@ body {
   text-decoration: none;
   -webkit-border-radius: 2px;
   font-size: 17px;
-  font-weight: 400x;
+  font-weight: 400;
   background-color:#0d0d0d;
   padding: 8px 15px;
   text-align: center;
   padding: 5px 17px;
-  letter-spacing: 1px;
-  line-height: 18px;
+  font-family: "Poppins", sans-serif;
 }
-
-/* footer */
-.footer-section {
-  background-color: #0d6efd;
-  background-image: url(../homepageimages/Group\ 48095504\ footer-bg.svg);
-  padding: 30px 0px 10px;
-}
-
-.footer-left-sec p {
-  font-size: 13px;
-  letter-spacing: 0.7px;
-  font-weight: 500;
-  color: #ebebeb;
-}
-
-.left-socials-icons a {
-  color: #ebebeb;
-  border: 1px solid white;
-  padding: 12px;
-  font-size: 13px;
-  margin-right: 10px;
-  border-radius: 10%;
-}
-
-.footer-column-links a {
-  font-size: 11px;
-  color: #ebebeb;
-  text-transform: uppercase;
-  padding: 4px 10px;
-  margin: 7px 0px 0px;
-  display: block;
-}
-
-.footer-column-links-tags a {
-  font-size: 11px;
-  border: 1px solid rgba(255, 255, 255, 0.271);
-  color: #ebebeb;
-  letter-spacing: 0.9px;
-  line-height: 14px;
-  font-weight: 600;
-  padding: 8px 15px;
-  display: inline-block;
-  margin: 0 10px 10px 0;
-  text-decoration: none;
-  -webkit-border-radius: 17px;
-}
-.footer-column-links-tags a:hover {
-  color: white;
-  transition: 0.4s ease-in-out;
-  background-color: #da1c5c;
-  -webkit-border-radius: 13px;
-}
-
-.footer-post-sec {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 10px;
-}
-
-.footer-date {
-  font-size: 10px;
-  color: #ebebeb;
-  text-transform: uppercase;
-}
-
-.footer-post-sec img {
-  display: block;
-  max-width: 100%;
-  border-radius: 5%;
-}
-
-.footer-post-sec p {
-  font-size: 12px;
-  color: #ebebeb;
-}
-
-.footer-section h6 {
-  font-size: 13px;
-  text-align: center;
-  letter-spacing: 1px;
-  font-weight: 600;
-  color: #ebebeb;
-  text-transform: uppercase;
-}
-
-.footer-top {
-  border-bottom: 3px rgba(255, 255, 255, 0.05) solid;
-  border-width: 2px;
-  padding: 20px 0px 10px;
-}
-
-.footer-social-icons a {
-  color: #ebebeb;
-  font-size: 13px;
-  text-align: center;
-  margin: 6px;
-}
-
-.footer-delevery-process {
-  padding: 30px 0px 30px;
-}
-
-.footer-delevery-process p {
-  font-size: 11px;
-  letter-spacing: 1px;
-}
-
-.footer-delevery-process i {
-  font-size: 20px;
-  /* color: #949494; */
-  margin-bottom: 13px;
-}
-
-.copyright-section p {
-  font-size: 11px;
-  color: #ebebeb;
-  font-family: "DIN Next", sans-serif;
-}
-
-.agency-copy {
-  color: #ebebeb;
-  text-decoration: none;
-}
-
-.footer-social-nav li {
-  list-style-type: none;
-  font-size: 11px;
-}
-
-.window-top-bottom-scroll {
-  background-color: white;
-  position: fixed;
-  bottom: 0;
-  right: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  height: 50px;
-  width: 50px;
-}
-
-.window-top-bottom-scroll .btn {
-  padding: 10px 20px;
-  font-size: 13px;
-}
-
-.footer-social-nav li a {
-  font-size: 13px;
-  border: 1px solid;
-  padding: 5px 6px;
-  border-radius: 23px;
-  border: 1px solid rgba(255, 255, 255, 0.271);
-  margin-right: 3px;
-}
-/* 984 */
