new header and footer add

--- a/css/categories.css
+++ b/css/categories.css
@@ -70,7 +70,7 @@
 
   }
   .categories-bg-img-item-2{
-    background-image: url(../img/item1.\(1\).jpg);
+    background-image: url(../item1.\(1\).jpg);
     
     background-repeat: no-repeat;
     background-size: cover;
