--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Montserrat:wght@700&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Jersey+15+Charted&family=Lalezar&family=Permanent+Marker&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sedan:ital@0;1&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Jersey+15+Charted&family=Lalezar&family=Permanent+Marker&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sedan:ital@0;1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Lalezar&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sedan:ital@0;1&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Lalezar&family=Permanent+Marker&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sedan:ital@0;1&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Lalezar&family=Permanent+Marker&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sedan:ital@0;1&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -11,6 +11,18 @@
 html {
   scroll-behavior: smooth;
 }
+body{
+  background-color:rgba(247, 230, 230, 0.726);
+}
+body p{
+  font-size: 16px;
+  font-weight: 400;
+  font-family: "Poppins", sans-serif;
+}
+body a{
+  font-size: 16px;
+  font-family: "Poppins", sans-serif;
+}
 
 .navbar-section {
   background: linear-gradient(90deg, #2e0259, #ff398b);
@@ -18,15 +30,11 @@ html {
 }
 .nav-sign-btn .btn {
   border: 1px solid white;
+  font-family: "Poppins", sans-serif;
   color: white;
   padding: 5px 20px;
   font-size: 16px;
-  font-family: poppins;
   border-radius: 4px;
-}
-.nav-sign-btn {
-  display: inline;
-  justify-content: center;
 }
 .offcanvas-body ul li {
   list-style-type: none;
@@ -40,9 +48,7 @@ html {
 .navbar-bottom-nav a {
   color: white;
   text-decoration: none;
-  font-size: 16px;
   font-weight: 500;
-  font-family: poppins;
   text-transform: uppercase;
   position: relative;
 }
@@ -178,8 +184,6 @@ html {
 
 
 
-
-
 /*==== banner-product-all-categories ====// */
 
 .banner-product-all-categories {
@@ -192,14 +196,38 @@ html {
   font-family: "Poppins", sans-serif;
   color: #333333;
 }
-.banner-product-all-categories-main-body .categories-brand{
+.banner-product-all-categories-main-body .categories-brand {
   padding: 10px 0px;
 }
 
 /* second-section-carousel */
-.second-section-carousel{
+.second-section-carousel {
   padding: 20px 0px 30px;
 }
+
+.owl-theme .owl-dots .owl-dot {
+  width: 10px;
+  height: 10px;
+  margin: 5px 7px;
+  background: #d6d6d6;
+  display: block;
+  transition: opacity 0.2s ease;
+  border-radius: 30px;
+}
+.owl-theme .owl-dots .owl-dot.active {
+  background: #2639ed;
+  display: none;
+}
+.owl-carousel .owl-nav.disabled, .owl-carousel .owl-dots.disabled{
+  display: block;
+  font-size: 40px;
+  display: flex;
+  justify-content: center;
+}
+.owl-prev{
+  margin-right: 20px;
+}
+
 
 /*Limited-offers-section */
 .Limited-offers-section {
@@ -215,7 +243,7 @@ html {
   font-size: 20px;
   font-family: "Poppins", sans-serif;
   color: white;
-  background-color:#00a5ff;
+  background-color: #00a5ff;
   border-radius: 6px;
   width: 200px;
   margin: 0px auto;
@@ -229,7 +257,6 @@ html {
   line-height: 35px;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
-
 }
 
 .Limited-offers-section .limited-offer-btn .btn {
@@ -242,18 +269,15 @@ html {
   border-radius: 23px;
 }
 
-
 /* left side */
 .main-wrapper-section .home-leftside-wrapper .card {
   box-shadow: 0px 4px 21.7px 0px #0000002b;
-
 }
 
 .home-leftside-wrapper .card-body h5 {
   font-size: 18px;
   font-family: "Poppins", sans-serif;
   font-weight: 500;
-
 }
 .home-leftside-wrapper .card-body h6 {
   font-size: 14px;
@@ -275,7 +299,6 @@ html {
   padding: 8px 16px;
 }
 
-
 .home-leftside-wrapper .card-body .home-leftside-wrapper-btn:hover {
   background-color: #0d0d0d;
   transition: 0.3s ease-in-out;
@@ -283,6 +306,7 @@ html {
 
 /* right side */
 /* product-cards */
+
 .product-cap {
   padding: 20px 0px 20px;
   position: relative;
@@ -294,14 +318,14 @@ html {
   font-weight: 600;
   color: #343434;
 }
-.reausable-span{
+.reausable-span {
   background-color: #0f2593;
   height: 14px;
   display: inline-block;
   width: 13px;
   border-radius: 15%;
 }
-.product-cap ::before{
+.product-cap ::before {
   position: absolute;
   content: "";
   background-color: #0f2593;
@@ -315,7 +339,7 @@ html {
   font-family: "Poppins", sans-serif;
   font-weight: 500;
 }
-.product-caption-btn .btn{
+.product-caption-btn .btn {
   border-radius: 4px;
   font-size: 16px;
   padding: 6px 26px 6px 26px;
@@ -329,6 +353,50 @@ html {
   position: relative;
   height: 100%;
 }
+.product-cards-top-filter-input input {
+  width: 70%;
+  display: block;
+  margin-left: auto;
+  border: 2px solid #00a5ff;
+  padding: 6px 10px;
+  border-radius: 4px;
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 1px;
+}
+.product-cards-top-filter-input input::placeholder {
+color: #0d0d0d;
+}
+.product-cards-top-filter-input {
+  position: relative;
+}
+.product-card-top-search-glass{
+  position: absolute;
+  right: 0;
+  top: 0;
+  transform: translate(-50% -50%);
+  background-color: #0d0d0d;
+}
+.product-card-top-search-glass .btn{
+ color: white;
+}
+.product-cards-top-filter-input ul{
+list-style-type: none;
+}
+.product-cards-top-filter-input ul{
+ color: black;
+ text-decoration: none;
+ position: absolute;
+ right: 40px;
+ top: 0;
+ transform: translate(-50% -50%);
+}
+.product-cards-top-filter-input ul li a{
+color: #0d0d0d;
+font-family: "Poppins", sans-serif;
+}
+
 .product-body .product-info {
   list-style-type: none;
   font-size: 14px;
@@ -350,7 +418,7 @@ html {
 }
 
 .product-cards .product-body .buy-now-btn .btn {
-  background-color:#00a5ff;
+  background-color: #00a5ff;
   font-size: 13px;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
@@ -373,7 +441,7 @@ html {
   justify-content: center;
   align-items: center;
   font-size: 15px;
-  background-color:#00a5ff;
+  background-color: #00a5ff;
 }
 
 .badge-secondary:hover {
@@ -384,7 +452,7 @@ html {
   color: white;
 }
 .badge-secondary a {
-  color:white;
+  color: white;
 }
 
 .product-price {
@@ -395,7 +463,7 @@ html {
 
 .product-body .left-sidebar-yellow-star {
   font-size: 14px;
-  color:#0d0d0d;
+  color: #0d0d0d;
   margin-bottom: 4px;
 }
 .product-body .home-card-btn {
@@ -405,40 +473,36 @@ html {
   text-decoration: none;
 }
 
-  /* Discover Latest Offer */
+/* Discover Latest Offer */
 
-
-  .Discover-Latest-Offer{
-    position: relative;
-    padding: 20px 0px 20px;
-    background-color: #ebebeb33;
-  }
-    .Discover-Latest-Offer-body ::before{
-      position: absolute;
-      content: "";
-      background-color: #0f2593;
-      height: 3px;
-      width: 7%;
-      top: 73px;
-    }
+.Discover-Latest-Offer {
+  position: relative;
+  padding: 20px 0px 20px;
+  background-color: #ebebeb33;
+}
+.Discover-Latest-Offer-body ::before {
+  position: absolute;
+  content: "";
+  background-color: #0f2593;
+  height: 3px;
+  width: 7%;
+  top: 73px;
+}
 .Discover-Latest-Offer h3 {
   font-size: 29px;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
-
 }
 
 .Discover-Latest-Offer .btn {
   font-size: 15px;
   font-weight: 500;
   font-family: "Poppins", sans-serif;
-  background-color:tomato;
+  background-color: tomato;
   color: white;
   padding: 6px 20px;
   border-radius: 23px;
 }
-
-
 
 /* computer-section */
 .computer-section {
@@ -465,7 +529,7 @@ html {
   justify-content: center;
   align-items: center;
   font-size: 15px;
-  background-color:#00a5ff;
+  background-color: #00a5ff;
 }
 
 .computer-section .badge-secondary:hover {
@@ -473,7 +537,7 @@ html {
   transition: 0.3s ease-in-out;
 }
 .computer-main-body-content .buy-now-btn .btn {
-  background-color:#00a5ff;
+  background-color: #00a5ff;
   font-size: 13px;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
@@ -494,14 +558,14 @@ html {
   background-position: 59% 45%;
   background-attachment: fixed;
 }
-.parallax-relative{
+.parallax-relative {
   position: relative;
 }
 .parallax-body-content {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50% , -50%);
+  transform: translate(-50%, -50%);
 }
 
 .parallax-body-content h2 {
@@ -516,7 +580,7 @@ html {
   color: white;
   font-weight: 600;
   font-size: 16px;
-  background-color:#0d6efd;
+  background-color: #0d6efd;
   letter-spacing: 2px;
 }
 
@@ -569,18 +633,16 @@ html {
   position: absolute;
   right: 10px;
   font-size: 14px;
-  background-color:#00a5ff;
+  background-color:tomato;
   border: 1px solid;
   border-radius: 50%;
   padding: 7px;
-
   top: 0;
 }
 
 .Cosmetics-sales-section .first-card .card-body h5 {
   font-size: 23px;
   font-family: "Poppins", sans-serif;
-
 }
 
 .Cosmetics-sales-section .first-card .card-body p {
@@ -588,24 +650,21 @@ html {
   letter-spacing: 1px;
   line-height: 27px;
   font-family: "Poppins", sans-serif;
-
 }
 
 .Cosmetics-sales-section .first-card .card-body .glasses-btn .btn {
   font-size: 14px;
   color: #fff;
-  background-color:#0d0d0d;
+  background: linear-gradient(90deg, #cc7c6a, #ff398b);
   border-color: rgb(255 255 255 / 15%);
   padding: 10px 10px;
   font-family: "Poppins", sans-serif;
-
 }
 
 .Cosmetics-sales-section .second-card .card-body h5 {
   font-size: 19px;
   letter-spacing: 1px;
   font-family: "Poppins", sans-serif;
-
 }
 
 .Cosmetics-sales-section .second-card .card-body p {
@@ -613,17 +672,15 @@ html {
   letter-spacing: 1px;
   line-height: 27px;
   font-family: "Poppins", sans-serif;
-
 }
 
 .Cosmetics-sales-section .second-card .card-body .Cosmetics-btn .btn {
   font-size: 14px;
   color: #fff;
-  background-color:#0d0d0d;
+  background: linear-gradient(90deg, #cc7c6a, #ff398b);
   border-color: rgb(255 255 255 / 15%);
   padding: 10px 10px;
   font-family: "Poppins", sans-serif;
-
 }
 
 .Cosmetics-sales-section .third-card .card-img-overlay {
@@ -638,7 +695,6 @@ html {
   background-color: white;
   padding: 10px 10px;
   font-family: "Poppins", sans-serif;
-
 }
 
 .Cosmetics-sales-section .forth-card .card-body h2 {
@@ -654,7 +710,6 @@ html {
   font-weight: 600;
   letter-spacing: 1px;
   font-family: "Poppins", sans-serif;
-
 }
 
 .Cosmetics-sales-section .forth-card .card-body p {
@@ -667,16 +722,13 @@ html {
 .Cosmetics-sales-section .forth-card .card-body .hurry-up-btn .btn {
   font-size: 14px;
   color: #fff;
-  background-color:#0d0d0d;
+  background: linear-gradient(90deg, #cc7c6a, #ff398b);
   border-color: rgb(255 255 255 / 15%);
   padding: 8px 20px;
   font-family: "Poppins", sans-serif;
-
 }
 
-
 /* trending-section */
-
 
 .trending-section h4 {
   font-size: 30px;
@@ -704,7 +756,7 @@ html {
   justify-content: center;
   align-items: center;
   font-size: 15px;
-  background-color:#00a5ff;
+  background-color: #00a5ff;
 }
 
 .trending-section .badge-secondary:hover {
@@ -725,7 +777,7 @@ html {
 }
 
 .trending-section .buy-now-btn .btn {
-  background-color:#00a5ff;
+  background-color: #00a5ff;
   font-size: 13px;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
@@ -733,8 +785,6 @@ html {
   color: white;
   padding: 6px 23px;
 }
-
-
 
 /* homepage-bottom-newslater-section */
 .homepage-bottom-newslater-section {
@@ -757,13 +807,11 @@ html {
   border: 1px solid rgb(255 255 255 / 62%);
   font-family: "Poppins", sans-serif;
   font-weight: 600;
-
 }
 .homepage-bottom-newslater-section .newslater-body .btn:hover {
   color: white;
   background-color: rgba(255, 255, 255, 0.119);
 }
-
 
 /* brand-company-section */
 .brand-company-section {
@@ -870,7 +918,7 @@ html {
 /*===//===// footer ===//==== */
 .footer-section {
   box-shadow: 0px 4px 21.7px 0px #0000002b;
-  background-color:#343434;
+  background: linear-gradient(90deg, #2e0259, #270513);
   padding: 30px 0px 10px;
 }
 
@@ -880,7 +928,6 @@ html {
   font-weight: 400;
   color: #ebebeb;
   font-family: "Poppins", sans-serif;
-
 }
 
 .left-socials-icons a {
@@ -888,8 +935,7 @@ html {
   border: 1px solid white;
   padding: 7px 14px;
   margin-right: 10px;
-  border-radius:4px;
-  
+  border-radius: 4px;
 }
 
 .footer-column-links a {
@@ -948,7 +994,7 @@ html {
 .footer-post-sec p {
   font-size: 13px;
   font-family: "Poppins", sans-serif;
-line-height: 26px;
+  line-height: 26px;
   color: #ebebeb;
 }
 
@@ -982,7 +1028,7 @@ line-height: 26px;
 .footer-delevery-process p {
   font-size: 13px;
   font-family: "Poppins", sans-serif;
-line-height: 26px;
+  line-height: 26px;
   letter-spacing: 1px;
 }
 
@@ -990,7 +1036,6 @@ line-height: 26px;
   font-size: 20px;
   margin-bottom: 13px;
   font-family: "Poppins", sans-serif;
-
 }
 
 .copyright-section p {
@@ -1008,7 +1053,6 @@ line-height: 26px;
   list-style-type: none;
   font-size: 11px;
   font-family: "Poppins", sans-serif;
-
 }
 
 .window-top-bottom-scroll {
@@ -1033,4 +1077,3 @@ line-height: 26px;
   border: 1px solid rgba(255, 255, 255, 0.271);
   margin-right: 3px;
 }
-
