--- a/css/style.css
+++ b/css/style.css
@@ -7,25 +7,27 @@
   margin: 0;
   box-sizing: border-box;
 }
-
 html {
   scroll-behavior: smooth;
 }
+
 body{
   background-color:rgba(247, 230, 230, 0.726);
 }
+
 body p{
   font-size: 16px;
   font-weight: 400;
   font-family: "Poppins", sans-serif;
 }
+
 body a{
   font-size: 16px;
   font-family: "Poppins", sans-serif;
 }
 
 .navbar-section {
-  background: linear-gradient(90deg, #2e0259, #ff398b);
+  background: linear-gradient(90deg, #2e0259, #891244);
   padding: 4px 0px;
 }
 .nav-sign-btn .btn {
@@ -36,22 +38,28 @@ body a{
   font-size: 16px;
   border-radius: 4px;
 }
+
 .offcanvas-body ul li {
   list-style-type: none;
 }
+
 .hammer {
   color: white;
 }
+
 .hammer:hover {
   color: white;
 }
+
 .navbar-bottom-nav a {
   color: white;
   text-decoration: none;
   font-weight: 500;
+  letter-spacing: 0.8px;
   text-transform: uppercase;
   position: relative;
 }
+
 .navbar-bottom-nav a::after {
   content: "";
   position: absolute;
@@ -62,7 +70,7 @@ body a{
   right: 0;
   margin: 0 auto;
   transform: scaleX(0);
-  transition: 0.5s ease-in-out;
+  transition: 0.3s ease-in-out;
 }
 .navbar-bottom-nav a:hover::after {
   transform: scaleX(1);
@@ -116,13 +124,22 @@ body a{
   padding: 5px 20px;
 }
 .header-input {
-  width: 50%;
+  width: 100%;
   padding: 7px 10px 7px;
   font-weight: 500;
   letter-spacing: 1px;
   font-size: 16px;
-  border-radius: 4px;
-  border: 2px solid purple;
+  border-radius: 7px;
+  border: 2px solid white;
+
+}
+.header-input-body{
+  width: 50%;
+  display: flex;
+  align-items: center;
+}
+.header-input-body-glass{
+  margin-left: -30px;
 }
 .accordion-button {
   background: linear-gradient(90deg, #1c0336, #321b25);
