--- a/css/add-tocart.css
+++ b/css/add-tocart.css
@@ -6,7 +6,6 @@
   font-size: 16px;
   letter-spacing: 1px;
   font-family: "Poppins", sans-serif;
-
 }
 
 .plus-minus a {
@@ -14,7 +13,6 @@
   text-decoration: none;
   color: black;
 }
-
 .plus-minus button {
   text-decoration: none;
   padding: 1px 13px;
@@ -48,7 +46,6 @@ font-family: "Poppins", sans-serif;
   font-family: "Poppins", sans-serif;
   font-weight: 400;
 }
-
 .add-to-carts-featured-products-sizes-btn .btn {
   border-radius: 10%;
   display: flex;
@@ -78,7 +75,6 @@ font-family: "Poppins", sans-serif;
  border: 1px solid #0d6efd;
 }
 
-
 .add-to-carts-featured-products-sizes-btn p{
   font-size: 16px;
   font-weight: 400;
@@ -90,9 +86,7 @@ font-family: "Poppins", sans-serif;
   line-height: 28px;
   font-weight: 400;
   font-family: "Poppins", sans-serif;
-
 }
-
 
 .write-review-btn .btn {
   padding: 7px 20px;
@@ -147,7 +141,6 @@ font-family: "Poppins", sans-serif;
   transition: all 0.2s ease-in-out;
 }
 
-
 .related-products-title p {
   font-size: 16px;
   font-family: "Poppins", sans-serif;
@@ -168,6 +161,8 @@ font-family: "Poppins", sans-serif;
 
 .inner img {
   padding: 10px;
+  width: 100%;
+  height: 200px;
 }
 
 .related-products-section .card-text {
@@ -178,11 +173,3 @@ font-family: "Poppins", sans-serif;
   font-family: "Poppins", sans-serif;
 
 }
-
-
-
-
-
-
-
-
