--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,8 @@ body a{
 }
 
 .navbar-section {
-  background: linear-gradient(90deg, #2e0259, #891244);
-  padding: 4px 0px;
+  background: linear-gradient(90deg, #231a2d, #090707bf); 
+   padding: 4px 0px;
 }
 .nav-sign-btn .btn {
   border: 1px solid white;
@@ -36,17 +36,14 @@ body a{
   color: white;
   padding: 5px 20px;
   font-size: 16px;
-  border-radius: 4px;
+  border-radius: 6px;
 }
-
 .offcanvas-body ul li {
   list-style-type: none;
 }
-
 .hammer {
   color: white;
 }
-
 .hammer:hover {
   color: white;
 }
@@ -54,8 +51,8 @@ body a{
 .navbar-bottom-nav a {
   color: white;
   text-decoration: none;
-  font-weight: 500;
-  letter-spacing: 0.8px;
+  font-weight: 400;
+  letter-spacing: 0.5px;
   text-transform: uppercase;
   position: relative;
 }
@@ -64,7 +61,7 @@ body a{
   content: "";
   position: absolute;
   background: linear-gradient(90deg, #45e0b9cf, #22e5f3);
-  height: 3px;
+  height: 4px;
   left: 0;
   bottom: -4px;
   right: 0;
@@ -78,31 +75,32 @@ body a{
 .navbar-bottom-nav li {
   list-style-type: none;
   margin-right: 16px;
-  padding: 10px 0px 10px;
+  padding: 5px 0px 2px;
 }
 .navbar-bottom-nav {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 .offcanvas-body ul a {
   list-style-type: none;
-  font-size: 17px;
-  font-weight: 500;
-  font-family: poppins;
+  font-size: 16px;
+  font-weight: 400;
+  font-family: "Poppins", sans-serif;
   color: white;
-  text-transform: uppercase;
 }
 .offcanvas-body ul a:hover {
   text-decoration: underline;
-  color: #ee750b;
-  transition: 0.5s ease-in-out;
+  color:white;
 }
 .offcanvas-body {
-  background: linear-gradient(90deg, #1c0336, #321b25);
+  background: linear-gradient(90deg, #231a2d, #090707bf);
 }
 .dropdown-menu a {
   color: #242424 !important;
+  font-size: 16px;
+  font-weight: 400;
+  font-family: "Poppins", sans-serif;
 }
 .offcanvas-social-icons {
   display: flex;
@@ -125,37 +123,40 @@ body a{
 }
 .header-input {
   width: 100%;
-  padding: 7px 10px 7px;
+  padding: 4px 10px 4px;
   font-weight: 500;
-  letter-spacing: 1px;
+  letter-spacing: 0.5px;
   font-size: 16px;
-  border-radius: 7px;
-  border: 2px solid white;
-
+  border-radius: 3px;
+  border: 4px solid white;
+}
+.accordion-flush .accordion-item .accordion-button{
+  font-size: 16px;
+  font-weight: 400;
+  font-family: "Poppins", sans-serif;
 }
 .header-input-body{
-  width: 50%;
+  width: 40%;
   display: flex;
+  justify-content: center;
   align-items: center;
 }
 .header-input-body-glass{
   margin-left: -30px;
 }
 .accordion-button {
-  background: linear-gradient(90deg, #1c0336, #321b25);
+  background: linear-gradient(90deg, #231a2d, #090707bf); 
   color: white;
   border: none;
-  text-transform: uppercase;
   font-size: 16px;
-  font-family: poppins;
+  font-family: "Poppins", sans-serif;
 }
 .accordion-item {
   border: none;
   background: linear-gradient(90deg, #1c0336, #321b25);
   color: white;
-  text-transform: uppercase;
-  font-size: 16px;
-  font-family: poppins;
+  font-size: 15px;
+  font-family: "Poppins", sans-serif;
 }
 
 .accordion-button:not(.collapsed):after {
@@ -176,27 +177,25 @@ body a{
 .profile-owner h4 {
   font-family: poppins;
   font-weight: 600;
-  text-decoration: underline;
+  font-size: 20px;
+  margin-bottom: 0px;
   font-style: italic;
-  color: violet;
 }
-.profile-owner {
-  position: relative;
+.profile-owner span {
+  font-family: "Poppins", sans-serif;
+  font-size: 14px;
+
 }
-.profile-owner img {
-  animation: animate-client;
-  animation-duration: 1.4s;
-  animation-iteration-count: infinite;
+.view-site-or-profile h5{
+  color: white;
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  font-style: italic;
+  margin-bottom: 10px;
+  border-bottom: 1px solid white;
+  padding-bottom: 10px;
 }
 
-@keyframes animate-client {
-  0% {
-    transform: scale(0);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
 
 
 
@@ -935,13 +934,13 @@ font-family: "Poppins", sans-serif;
 /*===//===// footer ===//==== */
 .footer-section {
   box-shadow: 0px 4px 21.7px 0px #0000002b;
-  background: linear-gradient(90deg, #2e0259, #270513);
-  padding: 30px 0px 10px;
+  background: linear-gradient(90deg, #231a2d, #090707bf);  padding: 4px 0px;
+  padding: 20px 0px 10px;
 }
 
 .footer-left-sec p {
-  font-size: 14px;
-  line-height: 26px;
+  font-size: 15px;
+  line-height: 29px;
   font-weight: 400;
   color: #ebebeb;
   font-family: "Poppins", sans-serif;
@@ -950,13 +949,13 @@ font-family: "Poppins", sans-serif;
 .left-socials-icons a {
   color: whitesmoke;
   border: 1px solid white;
-  padding: 7px 14px;
+  padding: 7px 13px;
   margin-right: 10px;
-  border-radius: 4px;
+  border-radius: 9px;
 }
 
 .footer-column-links a {
-  font-size: 13px;
+  font-size: 14px;
   color: #ebebeb;
   text-transform: uppercase;
   padding: 4px 10px;
@@ -970,13 +969,13 @@ font-family: "Poppins", sans-serif;
 }
 
 .footer-column-links-tags a {
-  font-size: 12px;
+  font-size: 13px;
   font-family: "Poppins", sans-serif;
   border: 1px solid rgba(255, 255, 255, 0.271);
   color: #ebebeb;
   letter-spacing: 0.9px;
   line-height: 14px;
-  font-weight: 600;
+  font-weight: 500;
   padding: 8px 15px;
   display: inline-block;
   margin: 0 10px 10px 0;
@@ -1009,54 +1008,54 @@ font-family: "Poppins", sans-serif;
 }
 
 .footer-post-sec p {
-  font-size: 13px;
+  font-size: 14px;
   font-family: "Poppins", sans-serif;
   line-height: 26px;
+  font-weight: 400;
   color: #ebebeb;
+}
+.footer-post-sec p:hover {
+text-decoration: underline;
+cursor: pointer;
 }
 
 .footer-section h6 {
   font-size: 16px;
   text-align: center;
   font-family: "Poppins", sans-serif;
-  font-weight: 600;
+  font-weight: 500;
   color: #ebebeb;
   text-transform: uppercase;
 }
 
 .footer-top {
-  border-bottom: 3px rgba(255, 255, 255, 0.05) solid;
+  border-bottom: 3px rgba(255, 255, 255, 0.13) solid;
   border-width: 2px;
   padding: 20px 0px 10px;
 }
 
 .footer-social-icons a {
   color: #ebebeb;
-  font-size: 13px;
+  font-size: 14px;
   text-align: center;
   font-family: "Poppins", sans-serif;
   margin: 6px;
 }
 
 .footer-delevery-process {
-  padding: 30px 0px 30px;
+  padding: 20px 0px 20px;
 }
 
 .footer-delevery-process p {
-  font-size: 13px;
+  font-size: 14px;
   font-family: "Poppins", sans-serif;
-  line-height: 26px;
-  letter-spacing: 1px;
-}
-
-.footer-delevery-process i {
-  font-size: 20px;
-  margin-bottom: 13px;
-  font-family: "Poppins", sans-serif;
+  line-height: 27px;
+  font-weight: 400;
 }
 
 .copyright-section p {
-  font-size: 13px;
+  font-size: 14px;
+  font-weight: 400;
   color: #ebebeb;
   font-family: "Poppins", sans-serif;
 }
@@ -1066,31 +1065,3 @@ font-family: "Poppins", sans-serif;
   text-decoration: none;
 }
 
-.footer-social-nav li {
-  list-style-type: none;
-  font-size: 11px;
-  font-family: "Poppins", sans-serif;
-}
-
-.window-top-bottom-scroll {
-  background-color: white;
-  position: fixed;
-  bottom: 0;
-  right: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  height: 50px;
-  width: 50px;
-}
-
-.footer-social-nav li a {
-  font-size: 13px;
-  border: 1px solid;
-  padding: 5px 6px;
-  border-radius: 23px;
-  font-family: "Poppins", sans-serif;
-  border: 1px solid rgba(255, 255, 255, 0.271);
-  margin-right: 3px;
-}
