--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,56 @@ body a{
 
 
 
+
+/* profile-Section */
+.main-profile-wrapper-body{
+  padding: 20px 0px 40px;
+  background-color:#ebebeb;
+  font-family: "Poppins", sans-serif;
+}
+
+.main-profile-wrapper-body span{
+  font-size: 16px;
+  font-weight: 400;
+}
+.main-profile-wrapper-body .title-bar h6{
+  font-weight: 600;
+  font-size: 21px;
+}
+.main-profile-wrapper-body .container{
+  max-width: 1020px !important;
+  margin: 0px auto;
+}
+.main-profile-wrapper-body .profile-area .main-profile {
+  margin-bottom: 20px;
+  display: flex;
+  position: relative;
+  align-items: center;
+}
+.content-box ul li {
+  list-style-type: none;
+}
+.main-profile-wrapper-body .hrtag {
+  color: black;
+  border-bottom: 2px dotted;
+  display: block;
+  width: 100%;
+  height: 2px;
+}
+
+/* Cart-Section */
+.main-top-cart-delivery-section td{
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+}
+
+
+
+
+
+
+
+
 /*==== banner-product-all-categories ====// */
 
 .banner-product-all-categories {
@@ -849,6 +899,8 @@ font-family: "Poppins", sans-serif;
 .brand-company-section {
   padding: 30px 0px 50px;
   background-color: #f9f9f9;
+  font-family: "Poppins", sans-serif;
+
 }
 
 .brand-company-section img {
@@ -858,22 +910,22 @@ font-family: "Poppins", sans-serif;
 
 .brand-company-section h4 {
   font-size: 32px;
-  font-family: "Poppins", sans-serif;
   font-weight: 600;
 }
 
 .brand-company-section p {
   font-size: 16px;
   color: #424242;
-  font-family: "Poppins", sans-serif;
   font-weight: 500;
   letter-spacing: 1px;
 }
 
-/* our-team-section */
 
+/* our-team-section */
 .our-team-section {
   padding: 20px 0px 20px;
+  font-family: "Poppins", sans-serif;
+
 }
 .our-team-section .our-team-section-top-content h2 {
   font-size: 36px;
@@ -883,14 +935,12 @@ font-family: "Poppins", sans-serif;
   font-weight: 500;
   color: #6a6a6a;
   line-height: 29px;
-  font-family: "Poppins", sans-serif;
   font-size: 16px;
 }
 
 .our-team-section .hire-team-btn .btn {
   font-size: 15px;
   color: #fff;
-  font-family: "Poppins", sans-serif;
   background-color: #256a8f;
   border-radius: 6px;
   font-weight: 500;
@@ -934,13 +984,11 @@ font-family: "Poppins", sans-serif;
 
 .our-team-section .card h4 {
   color: #404040;
-  font-family: "Poppins", sans-serif;
   margin-bottom: 15px;
 }
 
 .our-team-section .card h6 {
   color: #949494;
-  font-family: "Poppins", sans-serif;
   font-size: 14px;
   font-weight: 500;
   letter-spacing: 1px;
@@ -956,13 +1004,15 @@ font-family: "Poppins", sans-serif;
   text-decoration: none;
 }
 
+
+
+
 /*===//===// footer ===//==== */
 .footer-section {
   background: linear-gradient(90deg, #231a2d, #090707bf);  padding: 4px 0px;
   padding: 10px 0px 10px;
-}
-.footer-section p {
-  font-family: "Poppins", sans-serif !important;
+  font-family: "Poppins", sans-serif;
+
 }
 
 .footer-left-sec p {
@@ -970,7 +1020,6 @@ font-family: "Poppins", sans-serif;
   line-height: 29px;
   font-weight: 400;
   color: #ebebeb;
-  font-family: "Poppins", sans-serif;
 }
 
 .left-socials-icons a {
@@ -987,7 +1036,6 @@ font-family: "Poppins", sans-serif;
   text-transform: uppercase;
   padding: 4px 10px;
   font-weight: 400;
-  font-family: "Poppins", sans-serif;
   margin: 7px 0px 0px;
   display: block;
 }
@@ -997,7 +1045,6 @@ font-family: "Poppins", sans-serif;
 
 .footer-column-links-tags a {
   font-size: 13px;
-  font-family: "Poppins", sans-serif;
   border: 1px solid rgba(255, 255, 255, 0.271);
   color: #ebebeb;
   letter-spacing: 0.9px;
@@ -1024,7 +1071,6 @@ font-family: "Poppins", sans-serif;
 .footer-date {
   font-size: 12px;
   color: #ebebeb;
-  font-family: "Poppins", sans-serif;
   text-transform: uppercase;
 }
 
@@ -1036,7 +1082,6 @@ font-family: "Poppins", sans-serif;
 
 .footer-post-sec p {
   font-size: 14px;
-  font-family: "Poppins", sans-serif;
   line-height: 26px;
   font-weight: 400;
   color: #ebebeb;
@@ -1049,7 +1094,6 @@ cursor: pointer;
 .footer-section h6 {
   font-size: 16px;
   text-align: center;
-  font-family: "Poppins", sans-serif;
   font-weight: 500;
   color: #ebebeb;
   text-transform: uppercase;
@@ -1065,7 +1109,6 @@ cursor: pointer;
   color: #ebebeb;
   font-size: 14px;
   text-align: center;
-  font-family: "Poppins", sans-serif;
   margin: 6px;
 }
 
@@ -1075,7 +1118,6 @@ cursor: pointer;
 
 .footer-delevery-process p {
   font-size: 14px;
-  font-family: "Poppins", sans-serif;
   line-height: 27px;
   font-weight: 400;
 }
@@ -1084,7 +1126,6 @@ cursor: pointer;
   font-size: 14px;
   font-weight: 400;
   color: #ebebeb;
-  font-family: "Poppins", sans-serif;
 }
 
 .agency-copy {
